@@ -102,6 +102,7 @@ Application Changes:
 - The Restricted Gear bonus can now be set to apply to any availability limit at character generation instead of being hardcoded to 24.
 - Mentor Spirit and Paragon source references are now displayed next to their names within the Spells and Spirits tab (for Mentor Spirits) and the Sprites and Complex Forms tab (for Paragons).
 - Complex Forms will now display their dicepool as well as a button to roll it in career mode if the appropriate options have been set.
+- Fixed the calculation of Drain Value Tooltips improperly showing the Extended and Limited drain calculation.
 
 Data Changes:
 
